# Cliffy

./: .gitignore  BACKLOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  ROADMAP.md  netlify.toml  package-lock.json  package.json
.github/: dependabot.yml  dependabot.yml.disabled
.github/workflows/: benchmark.yml  benchmark.yml.disabled  benchmarks.yml  ci.yml  publish-crates.yml  release.yml  security.yml
archive/cliffy-alive/src/: metabolism.rs  nervous_system.rs  physics.rs  renderer.rs  ui_cell.rs  ui_organism.rs
archive/cliffy-alive/tests/: ui_cell_test.rs
archive/cliffy-components/: Cargo.toml
archive/cliffy-components/src/: lifecycle.rs
archive/cliffy-dom/: Cargo.toml
archive/cliffy-frp/: Cargo.toml
archive/cliffy-frp/src/: behavior.rs
archive/cliffy-gpu/shaders/: geometric.wgsl
archive/cliffy-gpu/src/: lib.rs
archive/cliffy-protocols/: Cargo.toml
archive/cliffy-protocols/src/: consensus.rs  lib.rs
archive/cliffy-typescript/: package.json  tsconfig.json
archive/cliffy-typescript/archive/: behavior.ts  cliffy.ts  components.ts  components.tsx  geometric-runtime.ts
archive/cliffy-typescript/src/: index.ts
cliffy-alive/: Cargo.toml
cliffy-alive/src/: automata_bridge.rs  evolution.rs  frp_bridge.rs  lib.rs  metabolism.rs  nervous_system.rs  physics.rs  renderer.rs  ui_cell.rs  ui_organism.rs  wasm_bindings.rs
cliffy-alive/tests/: evolution_test.rs  integration_test.rs.disabled  organism_test.rs  ui_cell_test.rs
cliffy-components/: Cargo.toml
cliffy-components/src/: context.rs  hooks.rs  lib.rs  lifecycle.rs
cliffy-core/: Cargo.toml  README.md
cliffy-core/src/: behavior.rs  combinators.rs  component.rs  dataflow.rs  event.rs  geometric.rs  lib.rs  projection.rs  state.rs  transforms.rs
cliffy-dom/: Cargo.toml
cliffy-dom/src/: lib.rs
cliffy-frp/: Cargo.toml
cliffy-frp/src/: behavior.rs  lib.rs
cliffy-gpu/: Cargo.toml  README.md
cliffy-gpu/benches/: gpu_benchmarks.rs
cliffy-gpu/src/: lib.rs  simd.rs  wasm.rs
cliffy-loadtest/: Cargo.toml  README.md
cliffy-loadtest/src/: lib.rs  metrics.rs  network.rs  report.rs  scenarios.rs  simulator.rs
cliffy-protocols/: Cargo.toml  README.md
cliffy-protocols/src/: consensus.rs  crdt.rs  delta.rs  lattice.rs  lib.rs  serde_ga3.rs  storage.rs  sync.rs  vector_clock.rs
cliffy-purescript/: README.md  packages.dhall  spago.dhall
cliffy-purescript/src/: Cliffy.purs
cliffy-test/: Cargo.toml  README.md
cliffy-test/src/: error.rs  generators.rs  invariants.rs  lib.rs  macros.rs  manifold.rs  result.rs
cliffy-tsukoshi/: README.md  package-lock.json  package.json  tsconfig.json
cliffy-tsukoshi/src/: ga3.test.ts  ga3.ts  index.ts  rotor.test.ts  rotor.ts  state.test.ts  state.ts  test-setup.ts  transform.ts
cliffy-typescript/: package.json  tsconfig.json
cliffy-typescript/archive/: algebraic-combinators.ts  jsx.ts
cliffy-typescript/pkg/: .gitignore  cliffy_wasm.d.ts  cliffy_wasm_bg.wasm.d.ts
cliffy-typescript/src/: algebraic-jsx.ts  dom.ts  hooks.ts  index.ts  jsx-runtime.d.ts  multivector.ts  react.ts  renderer.ts  types.ts  wasm.d.ts
cliffy-wasm/: Cargo.toml  README.md
cliffy-wasm/src/: dom.rs  html.ts  lib.rs  protocols.rs  test.rs
cliffy-wasm/tests/: wasm_tests.rs
docs/: algebraic-tsx-guide.md  api-reference.md  distributed-state-guide.md  dom-projection-guide.md  frp-guide.md  geometric-algebra-primer.md  getting-started.md  migration-guide.md  purescript-ffi-patterns.md  testing-guide.md
docs/architecture/: ADR-001-geometric-algebra-foundation.md  ADR-002-classical-frp.md  ADR-003-wasm-first.md  ADR-004-hidden-complexity.md  README.md
examples/: .gitignore  README.md  netlify.toml  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json  vite.config.shared.ts
examples/algebraic-tsx-test/: index.html
examples/alive-button/: index.html  package.json
examples/alive-garden/: index.html  package.json  vite.config.ts
examples/archive/: MIGRATION.md
examples/basic-counter/: index.html  package.json
examples/collaborative-editor/: Cargo.toml  README.md  package.json  vite.config.ts
examples/collaborative-editor/src/: main.rs
examples/components-test/: index.html  package.json  tsconfig.json  vite.config.ts
examples/crdt-playground/: index.html  package.json  vite.config.ts
examples/design-tool/: index.html  package.json  vite.config.ts
examples/document-editor/: index.html  package.json  tsconfig.json  vite.config.ts
examples/form-validation/: index.html  package.json
examples/geometric-animations/: index.html
examples/geometric-transforms/: index.html  package.json  vite.config.ts
examples/geometric-visualization/: Cargo.toml  package.json  vite.config.ts
examples/geometric-visualization/src/: index.css
examples/gpu-benchmark/: index.html  package.json  vite.config.ts
examples/landing/: index.html  package.json  vite.config.ts
examples/multiplayer-game/: index.html  package.json  vite.config.ts
examples/p2p-sync/: README.md  index.html  package.json  vite.config.ts
examples/purescript-counter/: index.html  package.json  packages.dhall  spago.dhall
examples/purescript-todo/: index.html  package.json  packages.dhall  spago.dhall
examples/scripts/: build-all.js
examples/shared/: package.json
examples/signaling-server/: Dockerfile  package.json  server.ts  tsconfig.json
examples/testing-showcase/: index.html  package.json  vite.config.ts
examples/todo-app/: index.html  package.json  tsconfig.json  vite.config.ts
examples/tsx-counter/: index.html  package.json  tsconfig.json  vite.config.ts
examples/tsx-forms/: index.html  package.json  vite.config.ts
examples/tsx-todo/: index.html  package.json  tsconfig.json  vite.config.ts
examples/whiteboard/: index.html  package.json  tsconfig.json  vite.config.ts
scripts/: post-wasm-build.js  run-example.js
tools/create-cliffy/: README.md  package-lock.json  package.json  tsconfig.json
vite-plugin-algebraic-tsx/: README.md  package.json  tsconfig.json
vite-plugin-algebraic-tsx/src/: index.d.ts  index.ts  jsx.d.ts  transformer.ts
(+117 files in other folders)
