[workspace]
members = [
    "cliffy-core",
    "cliffy-frp",
    "cliffy-wasm",
    "cliffy-protocols",
    # "cliffy-gpu", # Deprecated - use amari-gpu directly
    "cliffy-dom",
    "cliffy-components",
    "cliffy-alive",
    "examples/collaborative-editor"
]
resolver = "2"

[workspace.dependencies]
# Amari geometric algebra dependencies (local development - v0.13.1)
amari-core = { path = "../../math/amari/amari-core" }
amari-fusion = { path = "../../math/amari/amari-fusion" }
amari-dual = { path = "../../math/amari/amari-dual" }
amari-tropical = { path = "../../math/amari/amari-tropical" }

nalgebra = "0.32"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", features = ["full"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
