[workspace]
members = [
    "cliffy-core",
    "cliffy-wasm",
]
resolver = "2"

[workspace.dependencies]
# Amari geometric algebra (local development - v0.13.1+)
amari-core = { path = "../../math/amari/amari-core", features = ["serialize"] }

# Core dependencies
serde = { version = "1.0", features = ["derive"] }

# WASM dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

# Async (optional, for future use)
tokio = { version = "1.48", features = ["sync"] }

[profile.release]
opt-level = "z"          # Optimize for size (WASM)
lto = true               # Link-time optimization
codegen-units = 1        # Single codegen unit for better optimization
panic = "abort"          # Smaller WASM binary

[profile.dev]
opt-level = 1            # Some optimization in dev for reasonable WASM size
