[workspace]
members = [
    "cliffy-core",
    "cliffy-gpu",
    "cliffy-loadtest",
    "cliffy-protocols",
    "cliffy-test",
    "cliffy-wasm",
]
resolver = "2"

[workspace.dependencies]
# Amari geometric algebra
# For local development: path = "../../math/amari/amari-core"
amari-core = { version = "0.18", features = ["serialize"] }

# Core dependencies
serde = { version = "1.0", features = ["derive"] }

# WASM dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

# Async (optional, for future use)
tokio = { version = "1.48", features = ["sync"] }

[profile.release]
opt-level = "z"          # Optimize for size (WASM)
lto = true               # Link-time optimization
codegen-units = 1        # Single codegen unit for better optimization
panic = "abort"          # Smaller WASM binary

[profile.dev]
opt-level = 1            # Some optimization in dev for reasonable WASM size
