[package]
name = "cliffy-alive"
version = "0.1.0"
edition = "2021"
description = "Living, self-assembling UIs built on Amari's cellular automata foundation"

[dependencies]
amari-core = { workspace = true }
amari-fusion = { workspace = true }
cliffy-core = { path = "../cliffy-core" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Document", 
  "Element", 
  "HtmlElement", 
  "Window", 
  "CssStyleDeclaration",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "MouseEvent",
  "KeyboardEvent",
  "EventTarget",
  "Event",
  "console"
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
rand = "0.8"

[features]
default = []
canvas = []
webgl = []