[package]
name = "cliffy-core"
version = "0.1.0"
edition = "2021"
description = "Cliffy framework core functionality using Amari geometric algebra"

[dependencies]
amari-core = { workspace = true }
amari-fusion = { workspace = true }
serde = { workspace = true }

[features]
default = []
simd = ["amari-core/simd"]