[package]
name = "cliffy-core"
version = "0.1.0"
edition = "2021"
description = "Reactive geometric algebra framework using Amari for core math"

[dependencies]
# Amari provides all geometric algebra functionality
amari-core = { workspace = true }

# Core dependencies
num-traits = { workspace = true }
serde = { workspace = true }

[features]
default = []
# Note: SIMD is handled by amari-core's features
simd = []