[package]
name = "cliffy-core"
version = "0.2.0"
edition = "2021"
description = "Reactive UI framework with geometric algebra state management"
license = "MIT"
repository = "https://github.com/justinelliottcobb/Cliffy"
readme = "README.md"
keywords = ["reactive", "frp", "geometric-algebra", "ui", "wasm"]
categories = ["gui", "wasm", "mathematics"]

[dependencies]
# Amari provides geometric algebra
amari-core = { workspace = true }

# Serialization
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
