[package]
name = "cliffy-dom"
version = "0.1.0"
edition = "2021"
description = "Geometric virtual DOM implementation for Cliffy web framework"

[dependencies]
cliffy-core = { path = "../cliffy-core" }
cliffy-frp = { path = "../cliffy-frp" }
serde = { workspace = true }
nalgebra = { workspace = true }
num-traits = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
slotmap = "1.0"
fxhash = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Text",
  "Event",
  "EventTarget",
  "Window",
  "HtmlInputElement",
  "HtmlButtonElement",
  "MouseEvent",
  "KeyboardEvent",
]