[package]
name = "cliffy-frp"
version = "0.1.0"
edition = "2021"
description = "Functional reactive programming primitives using geometric algebra"

[dependencies]
cliffy-core = { path = "../cliffy-core" }
tokio = { workspace = true }
serde = { workspace = true }
nalgebra = { workspace = true }
num-traits = { workspace = true }