[package]
name = "cliffy-gpu"
version = "0.3.1"
edition = "2021"
description = "WebGPU compute shaders for geometric algebra operations"
license = "MIT"
repository = "https://github.com/justinelliottcobb/Cliffy"
readme = "README.md"
keywords = ["gpu", "webgpu", "geometric-algebra", "simd", "wasm"]
categories = ["graphics", "mathematics", "wasm"]

[dependencies]
cliffy-core = { version = "0.3.1", path = "../cliffy-core" }
amari-core = { workspace = true }
wgpu = { version = "29.0", default-features = false, features = ["wgsl"] }
bytemuck = { version = "1.21", features = ["derive"] }
pollster = "0.4"
thiserror = "2.0"
log = "0.4"
wide = "1.1"

# WASM dependencies (optional)
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { workspace = true, optional = true, features = ["Window"] }
js-sys = { workspace = true, optional = true }

[features]
default = []
wasm = ["wgpu/webgl", "web-sys", "wasm-bindgen", "wasm-bindgen-futures", "js-sys"]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tokio = { version = "1", features = ["rt", "macros"] }

[[bench]]
name = "gpu_benchmarks"
harness = false
