[package]
name = "cliffy-loadtest"
version = "0.1.0"
edition = "2021"
description = "Scale testing framework for Cliffy - simulates 100-10,000+ concurrent users"
license = "MIT"

[dependencies]
# Core Cliffy crates
cliffy-core = { path = "../cliffy-core" }
cliffy-protocols = { path = "../cliffy-protocols" }
cliffy-test = { path = "../cliffy-test" }

# Geometric algebra
amari-core = "0.17.0"

# Parallelism
rayon = "1.10"

# Async runtime
tokio = { version = "1.48", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }

# Random number generation
rand = "0.8"

# Unique IDs
uuid = { version = "1.0", features = ["v4"] }

# Time measurement
instant = "0.1"

# Serialization for reports
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
