[package]
name = "cliffy-loadtest"
version = "0.2.0"
edition = "2021"
description = "Scale testing framework for Cliffy - simulates 100-10,000+ concurrent users"
license = "MIT"
repository = "https://github.com/justinelliottcobb/Cliffy"
readme = "README.md"
keywords = ["load-testing", "scale", "simulation", "distributed", "benchmark"]
categories = ["development-tools::testing", "simulation"]

[dependencies]
# Core Cliffy crates
cliffy-core = { version = "0.2.0", path = "../cliffy-core" }
cliffy-protocols = { version = "0.2.0", path = "../cliffy-protocols" }
cliffy-test = { version = "0.2.0", path = "../cliffy-test" }

# Geometric algebra
amari-core = { workspace = true }

# Parallelism
rayon = "1.10"

# Async runtime
tokio = { version = "1.48", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }

# Random number generation
rand = "0.8"

# Unique IDs
uuid = { version = "1.0", features = ["v4"] }

# Time measurement
instant = "0.1"

# Serialization for reports
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
