[package]
name = "cliffy-protocols"
version = "0.1.0"
edition = "2021"
description = "Distributed consensus protocols using geometric algebra"

[dependencies]
cliffy-core = { path = "../cliffy-core" }
cliffy-frp = { path = "../cliffy-frp" }
tokio = { workspace = true }
serde = { workspace = true }
amari-core = { workspace = true }
amari-fusion = { workspace = true }
uuid = "1.0"
dashmap = "5.5"