[package]
name = "geometric-visualization"
version = "0.1.0"
edition = "2021"
description = "Interactive geometric algebra visualization using Cliffy"

[dependencies]
cliffy-core = { path = "../../cliffy-core" }
cliffy-frp = { path = "../../cliffy-frp" }
cliffy-gpu = { path = "../../cliffy-gpu" }
tokio = { workspace = true }
wgpu = "0.19"
winit = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }
cgmath = "0.18"